CXDEVII-1788: Fixed spacing issue on the checkbox error message

--- a/aegon-sass-library/widgets/_lhfs.scss
+++ b/aegon-sass-library/widgets/_lhfs.scss
@@ -138,6 +138,7 @@
       }
     }
     label.checkbox {
+      text-align: left;
       line-height: 32px;
     }
     li.label.required:after, label.checkbox.required span.label:after {
